# AI-Financial-OS

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package.json
backend/: .env.example  cli.py  financial-backend.spec  pyproject.toml  run_server.py
backend/app/: main.py
backend/app/core/: config.py  database.py  duckdb.py
backend/app/models/: __init__.py  account.py  ai.py  budget.py  category.py  document.py  goal.py  household_bill.py  import_batch.py  insight_dismissal.py  investment.py  merchant_rule.py  net_worth_snapshot.py  recurring_transaction.py  settings.py  transaction.py
backend/app/seeds/: categories.py  settings.py
backend/app/tests/: conftest.py  test_accounts_purge.py  test_ai_assistant.py  test_ai_briefs.py  test_asset_resolution_flow.py  test_backups.py  test_balance_sheet_ai_tool.py  test_budgets.py  test_cashflow.py  test_dashboard_overview.py  test_economic_data.py  test_economy_data_integrity.py  test_eod_service.py  test_expense_category_detail.py  test_goals.py  test_goals_simulation.py  test_guardrails.py  test_health.py  test_imports.py  (+26 more)
backend/data/: financial.db
backend/tests/: test_no_legacy_modules.py
market-data-poc/: Architecture.md  Coverage.md  Provider-Orchestrator.md  Providers.md  README.md  Scoring.md  Scraping.md  pyproject.toml  run_poc.py
market-data-poc/adapters/: base.py  catalog.py
market-data-poc/catalog/: __init__.py  bonds.yaml  commodities.yaml  crypto.yaml  forex.yaml  macro_spain.yaml  macro_usa.yaml
market-data-poc/config/: providers.yaml  settings.py
market-data-poc/exporters/: catalog_generator.py  csv_exporter.py  json_exporter.py  report_generator.py
market-data-poc/models/: assets.py  base.py  catalog.py  company.py  evaluation.py  macro.py  market.py  news.py
market-data-poc/scrapers/: settings.py
market-data-poc/services/: cache.py  comparator.py  logging_config.py  orchestrator.py  runner.py  scorer.py
market-data-poc/tests/: test_base_adapter_indicator.py  test_bde_sdmx.py  test_catalog.py  test_catalog_csv.py  test_catalog_models.py  test_catalog_orchestrator.py  test_gap_stabilization.py  test_orchestrator.py
market-data-poc/validators/: data_quality.py
(+656 files in other folders)
