[project]
name = "ai-financial-os-backend"
version = "1.1.5"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.6.0",
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "python-multipart>=0.0.12",
    "yfinance>=0.2",
    "requests>=2.31",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]
build = [
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/tests/test_market_data_service.py" = ["E402", "F821"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
